Added better_errors, webfont gitignore line, addtl styling for results

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+=======
+# Ignore all typography-related files (licensing)
+/app/assets/stylesheets/webfonts
+/app/assets/stylesheets/webfonts*
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
