--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ pickle-email-*.html
 /app/assets/stylesheets/webfonts
 /app/assets/stylesheets/webfonts*
 
+# Ignore compiled assets, compile yourself in production with "rake assets:precompile"
+/public/assets
+/public/assets/*
+
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
